[gd_scene load_steps=54 format=3 uid="uid://cj0rubpivu22d"]

[ext_resource type="Script" path="res://purple_goblin/character_body_2d.gd" id="1_grfv7"]
[ext_resource type="Texture2D" uid="uid://b1xaulthr731t" path="res://purple_goblin/assets/shooting.png" id="2_1pxop"]
[ext_resource type="Texture2D" uid="uid://bk61ru1gwfcbj" path="res://purple_goblin/assets/GoblinBow-Death.png" id="3_wxrbk"]
[ext_resource type="Texture2D" uid="uid://ehau0ly3t0cc" path="res://purple_goblin/assets/GoblinBow-Damage.png" id="4_5c60o"]
[ext_resource type="Texture2D" uid="uid://dyhxehfrqprjn" path="res://purple_goblin/assets/GoblinBow-Idle.png" id="5_b7qb4"]
[ext_resource type="Texture2D" uid="uid://3uaatvoucs3t" path="res://purple_goblin/assets/GoblinBow-Run.png" id="6_4cjdl"]

[sub_resource type="AtlasTexture" id="AtlasTexture_7fmis"]
atlas = ExtResource("2_1pxop")
region = Rect2(0, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_hfdhb"]
atlas = ExtResource("2_1pxop")
region = Rect2(48, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_c5fy8"]
atlas = ExtResource("2_1pxop")
region = Rect2(96, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_im8f1"]
atlas = ExtResource("2_1pxop")
region = Rect2(144, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_yiksi"]
atlas = ExtResource("2_1pxop")
region = Rect2(192, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_5afs0"]
atlas = ExtResource("2_1pxop")
region = Rect2(240, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_5fbbb"]
atlas = ExtResource("2_1pxop")
region = Rect2(288, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_a63px"]
atlas = ExtResource("2_1pxop")
region = Rect2(336, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_fd44l"]
atlas = ExtResource("2_1pxop")
region = Rect2(384, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_dx4pu"]
atlas = ExtResource("2_1pxop")
region = Rect2(432, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_q0cgc"]
atlas = ExtResource("2_1pxop")
region = Rect2(480, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_mahyj"]
atlas = ExtResource("2_1pxop")
region = Rect2(528, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_o8r3a"]
atlas = ExtResource("2_1pxop")
region = Rect2(576, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_rwjuu"]
atlas = ExtResource("3_wxrbk")
region = Rect2(0, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_o44vv"]
atlas = ExtResource("3_wxrbk")
region = Rect2(48, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_o2u4w"]
atlas = ExtResource("3_wxrbk")
region = Rect2(96, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_87f0k"]
atlas = ExtResource("3_wxrbk")
region = Rect2(144, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_xrhfo"]
atlas = ExtResource("3_wxrbk")
region = Rect2(192, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_473pd"]
atlas = ExtResource("3_wxrbk")
region = Rect2(240, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_p1mx0"]
atlas = ExtResource("3_wxrbk")
region = Rect2(288, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_7lcua"]
atlas = ExtResource("4_5c60o")
region = Rect2(0, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_kq1pv"]
atlas = ExtResource("4_5c60o")
region = Rect2(48, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_3nkle"]
atlas = ExtResource("4_5c60o")
region = Rect2(96, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_q3qcs"]
atlas = ExtResource("5_b7qb4")
region = Rect2(0, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_jq31p"]
atlas = ExtResource("5_b7qb4")
region = Rect2(48, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_l7e7q"]
atlas = ExtResource("5_b7qb4")
region = Rect2(96, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_jq6n6"]
atlas = ExtResource("5_b7qb4")
region = Rect2(144, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_tihkr"]
atlas = ExtResource("5_b7qb4")
region = Rect2(192, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_3wkgr"]
atlas = ExtResource("5_b7qb4")
region = Rect2(240, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_t1yih"]
atlas = ExtResource("5_b7qb4")
region = Rect2(288, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_y8h7h"]
atlas = ExtResource("6_4cjdl")
region = Rect2(0, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_vy0de"]
atlas = ExtResource("6_4cjdl")
region = Rect2(48, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_nqknu"]
atlas = ExtResource("6_4cjdl")
region = Rect2(96, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_w7ih3"]
atlas = ExtResource("6_4cjdl")
region = Rect2(144, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_8gs63"]
atlas = ExtResource("6_4cjdl")
region = Rect2(192, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_bhdok"]
atlas = ExtResource("6_4cjdl")
region = Rect2(240, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_bxkjy"]
atlas = ExtResource("6_4cjdl")
region = Rect2(288, 0, 48, 48)

[sub_resource type="SpriteFrames" id="SpriteFrames_sl8wt"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_7fmis")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hfdhb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c5fy8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_im8f1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yiksi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5afs0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5fbbb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a63px")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fd44l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dx4pu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q0cgc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mahyj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o8r3a")
}],
"loop": true,
"name": &"Attack",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_rwjuu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o44vv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o2u4w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_87f0k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xrhfo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_473pd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p1mx0")
}],
"loop": true,
"name": &"Death",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_7lcua")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kq1pv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3nkle")
}],
"loop": true,
"name": &"Hit",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_q3qcs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jq31p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l7e7q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jq6n6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tihkr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3wkgr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t1yih")
}],
"loop": true,
"name": &"Idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_y8h7h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vy0de")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nqknu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_w7ih3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8gs63")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bhdok")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bxkjy")
}],
"loop": true,
"name": &"Run",
"speed": 5.0
}]

[sub_resource type="Animation" id="Animation_llp24"]
resource_name = "Attack"
length = 1.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"Attack"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(1.2),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"end_of_attack"
}]
}

[sub_resource type="Animation" id="Animation_tw6hd"]
resource_name = "Death"
length = 0.7
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"Death"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6]
}

[sub_resource type="Animation" id="Animation_gl5em"]
resource_name = "Hit"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"Hit"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [0, 1, 2]
}

[sub_resource type="Animation" id="Animation_hauso"]
resource_name = "Idle"
length = 0.7
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"Idle"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6]
}

[sub_resource type="Animation" id="Animation_ect48"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}

[sub_resource type="Animation" id="Animation_xx5kt"]
resource_name = "Run"
length = 0.7
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"Run"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_b81ye"]
_data = {
"Attack": SubResource("Animation_llp24"),
"Death": SubResource("Animation_tw6hd"),
"Hit": SubResource("Animation_gl5em"),
"Idle": SubResource("Animation_hauso"),
"RESET": SubResource("Animation_ect48"),
"Run": SubResource("Animation_xx5kt")
}

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_pguhn"]
radius = 31.0
height = 90.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_p1hbd"]
size = Vector2(432, 96)

[node name="CharacterBody2D" type="CharacterBody2D"]
script = ExtResource("1_grfv7")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -72)
scale = Vector2(5.033, 5)
sprite_frames = SubResource("SpriteFrames_sl8wt")
animation = &"Attack"
frame = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_b81ye")
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_pguhn")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(160, 0)
shape = SubResource("RectangleShape2D_p1hbd")

[node name="Attack_cooldown" type="Timer" parent="."]
wait_time = 3.0

[node name="RayCast2D" type="RayCast2D" parent="."]
target_position = Vector2(376, 0)

[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="area_exited" from="Area2D" to="." method="_on_area_2d_area_exited"]
[connection signal="timeout" from="Attack_cooldown" to="." method="_on_attack_cooldown_timeout"]
